--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.41'
+    ext.gradle_version = '3.5.2'
+    ext.kotlin_version = '1.3.50'
+    ext.navigation_version = '2.2.0-rc01'
+    ext.multidex_version = '2.0.1'
+    ext.appcompat_version = '1.1.0'
+    ext.ktx_version = '1.1.0'
+    ext.constraintlayout_version = '1.1.3'
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,7 +25,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
