--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ buildscript {
     ext.appcompat_version = '1.1.0'
     ext.ktx_version = '1.1.0'
     ext.constraintlayout_version = '1.1.3'
+    ext.retrofit_version = '2.6.2'
+    ext.okhttp_version = '4.2.2'
     repositories {
         google()
         jcenter()
